Fri  25 Feb 2011 13:56:00 GMT - Release 0.90
  Remove test which is no longer applicable and fails in the latest Catalyst
  release.

Mon  24 Jan 2011 21:57:42 GMT - Release 0.89
  All classes are now made immutable. (Dave Rolsky)

  Added a Catalyst::Action::REST::ForBrowsers class. This will try to dispatch
  GET requests to a foo_GET_html method before trying foo_GET. (Dave Rolsky)

Tue  11 Jan 2011 23:07:00 GMT - Release 0.88
  Fix documentation for overriding Serialize and Deserialize actions
  in Catalyst::Controller::REST.

  Avoid warning with empty response bodies and new Catalyst version
  (>= 5.80030)

  Returning a body of '' is now possible - Catalyst::Action::Serialize
  acts like Catalyst::Action::RenderView (>= 0.16) by using the has_body
  predicate in Catalyst::Response (>= 5.80030)

Wed  3 Nov 2010 19:46:00 GMT - Release 0.87

  Fix Request class role when used with new Moose and other request
  class roles.

Wed  1 Sept 2010 23:14:00 BST - Release 0.86

  Add rest_serializer_json_options config key useable to set options
  like relaxed => 1 to be passed to the JSON serializer (Ton Voon)

  Make Data::Dumper unserializer safer by using a Safe compartment (Ton Voon)

Thu 13 May 2010 10:09:19 CEST - Release 0.85

  Make Catalyst::Action::Serialize::View return directly rather than serializing
  a response for 3XX status codes. This stops back-compat breakage from the
  previous change (in 0.84), whilst also allowing actual data serializers
  to still handle 3XX.

  Fix docs in Catalyst::TraitFor::Request::REST::ForBrowsers. (RT#54983)

Thu  6 May 2010 09:27:56 BST - Release 0.84
  Revert always using a trait rather than Catalyst::Request::REST to improve
  debug messages.

  Add a status_multiple_choices helper method to the Controller base class.

  Allow 3XX responses to be serialized.

Mon  8 Feb 2010 22:17:12 GMT - Release 0.83
  Make it possible to deserialize a request with a DELETE method. This probably