@@ -101,7 +101,7 @@ CONTRIBUTORS
     J. Shirley <jshirley@gmail.com>
 
 COPYRIGHT
-    Copyright the above named AUTHOR and CONTRIBUTORS
+    Copyright (c) 2006-2011 the above named AUTHOR and CONTRIBUTORS
 
 LICENSE
     You may distribute this code under the same terms as Perl itself.
